--- a/coke/index.html
+++ b/coke/index.html
@@ -14,6 +14,7 @@
         <div class="circle"></div>
         <header>
             <a href="#"><img src="./img/logo.png" class="logo"></a>
+            <div class="toggle" onclick="toggleMenu()"></div>
             <ul class="navigation">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Menu</a></li>
@@ -70,6 +71,13 @@
                 },
                 loop: true
             });
+
+            function toggleMenu() {
+                const menuToggle = document.querySelector('.toggle');
+                const navigation = document.querySelector('.navigation');
+                menuToggle.classList.toggle('active');
+                navigation.classList.toggle('active');
+            }
         </script>
     </section>
 </body>
